# ordered-set

./: .gitignore  .mailmap  .pre-commit-config.yaml  README.md  documentation_examples.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
ordered_set/: __init__.py
test/: test_ordered_set.py
